compilador.output
Terminais não utilizados na gramática

   ABRE_COLCHETES
   FECHA_COLCHETES
   LABEL
   TYPE
   ARRAY
   OF
   GOTO
   IF
   THEN
   ELSE
   NOT


Estado 33 conflitos: 2 de deslocamento/redução
Estado 35 conflitos: 2 de deslocamento/redução


Gramática

    0 $accept: programa $end

    1 $@1: %empty

    2 programa: $@1 PROGRAM IDENT ABRE_PARENTESES lista_idents FECHA_PARENTESES PONTO_E_VIRGULA bloco PONTO

    3 $@2: %empty

    4 bloco: parte_declara_vars $@2 comando_composto

    5 parte_declara_vars: parte_declara_vars PONTO_E_VIRGULA declara_vars

    6 $@3: %empty

    7 parte_declara_vars: VAR $@3 declara_vars

    8 declara_vars: declara_vars declara_var
    9             | declara_var

   10 $@4: %empty

   11 $@5: %empty

   12 declara_var: $@4 lista_id_var DOIS_PONTOS tipo $@5 PONTO_E_VIRGULA

   13 tipo: IDENT

   14 lista_id_var: lista_id_var VIRGULA var_id
   15             | var_id

   16 lista_idents: lista_idents VIRGULA IDENT
   17             | IDENT

   18 var_id: IDENT

   19 comando_composto: T_BEGIN comandos T_END

   20 comandos: comando_sem_rotulo comandos
   21         | %empty

   22 comando_sem_rotulo: atribuicao PONTO_E_VIRGULA
   23                   | comando_repetitivo comandos

   24 $@6: %empty

   25 atribuicao: variavel $@6 ATRIBUICAO expressao_simples

   26 comando_repetitivo: WHILE expressao DO comando_composto

   27 variavel: IDENT

   28 expressao: expressao_simples relacao

   29 expressao_simples: expressao_simples MAIS termo
   30                  | expressao_simples MENOS termo
   31                  | expressao_simples OR termo
   32                  | termo

   33 termo: termo MULT fator
   34      | termo DIV fator
   35      | termo AND fator
   36      | fator

   37 fator: variavel
   38      | numero
   39      | ABRE_PARENTESES expressao_simples FECHA_PARENTESES

   40 relacao: MAIOR expressao_simples
   41        | MENOR expressao_simples
   42        | MENOR MAIOR expressao_simples
   43        | MAIOR IGUAL expressao_simples
   44        | MENOR IGUAL expressao_simples
   45        | IGUAL expressao_simples

   46 numero: NUMERO


Terminais, com as regras onde eles aparecem

$end (0) 0
error (256)
PROGRAM (258) 2
ABRE_PARENTESES (259) 2 39
FECHA_PARENTESES (260) 2 39
VIRGULA (261) 14 16
PONTO_E_VIRGULA (262) 2 5 12 22
DOIS_PONTOS (263) 12
PONTO (264) 2
T_BEGIN (265) 19
T_END (266) 19
VAR (267) 7
IDENT (268) 2 13 16 17 18 27
ATRIBUICAO (269) 25
MAIS (270) 29
MENOS (271) 30
MULT (272) 33
DIV (273) 34
ABRE_COLCHETES (274)
FECHA_COLCHETES (275)
LABEL (276)
TYPE (277)
ARRAY (278)
OF (279)
GOTO (280)
IF (281)
THEN (282)
ELSE (283)
WHILE (284) 26
DO (285) 26
OR (286) 31
AND (287) 35
NOT (288)
IGUAL (289) 43 44 45
MAIOR (290) 40 42 43
MENOR (291) 41 42 44
NUMERO (292) 46


Não-terminais com as regras onde eles aparecem

$accept (38)
    à esquerda: 0
programa (39)
    à esquerda: 2, à direita: 0
$@1 (40)
    à esquerda: 1, à direita: 2
bloco (41)
    à esquerda: 4, à direita: 2
$@2 (42)
    à esquerda: 3, à direita: 4
parte_declara_vars (43)
    à esquerda: 5 7, à direita: 4 5
$@3 (44)
    à esquerda: 6, à direita: 7
declara_vars (45)
    à esquerda: 8 9, à direita: 5 7 8
declara_var (46)
    à esquerda: 12, à direita: 8 9
$@4 (47)
    à esquerda: 10, à direita: 12
$@5 (48)
    à esquerda: 11, à direita: 12
tipo (49)
    à esquerda: 13, à direita: 12
lista_id_var (50)
    à esquerda: 14 15, à direita: 12 14
lista_idents (51)
    à esquerda: 16 17, à direita: 2 16
var_id (52)
    à esquerda: 18, à direita: 14 15
comando_composto (53)
    à esquerda: 19, à direita: 4 26
comandos (54)
    à esquerda: 20 21, à direita: 19 20 23
comando_sem_rotulo (55)
    à esquerda: 22 23, à direita: 20
atribuicao (56)
    à esquerda: 25, à direita: 22
$@6 (57)
    à esquerda: 24, à direita: 25
comando_repetitivo (58)
    à esquerda: 26, à direita: 23
variavel (59)
    à esquerda: 27, à direita: 25 37
expressao (60)
    à esquerda: 28, à direita: 26
expressao_simples (61)
    à esquerda: 29 30 31 32, à direita: 25 28 29 30 31 39 40 41 42
    43 44 45
termo (62)
    à esquerda: 33 34 35 36, à direita: 29 30 31 32 33 34 35
fator (63)
    à esquerda: 37 38 39, à direita: 33 34 35 36
relacao (64)
    à esquerda: 40 41 42 43 44 45, à direita: 28
numero (65)
    à esquerda: 46, à direita: 38


State 0

    0 $accept: . programa $end

    $padrão  reduzir usando a regra 1 ($@1)

    programa  ir ao estado 1
    $@1       ir ao estado 2


State 1

    0 $accept: programa . $end

    $end  deslocar, e ir ao estado 3


State 2

    2 programa: $@1 . PROGRAM IDENT ABRE_PARENTESES lista_idents FECHA_PARENTESES PONTO_E_VIRGULA bloco PONTO

    PROGRAM  deslocar, e ir ao estado 4


State 3

    0 $accept: programa $end .

    $padrão  aceitar


State 4

    2 programa: $@1 PROGRAM . IDENT ABRE_PARENTESES lista_idents FECHA_PARENTESES PONTO_E_VIRGULA bloco PONTO

    IDENT  deslocar, e ir ao estado 5


State 5

    2 programa: $@1 PROGRAM IDENT . ABRE_PARENTESES lista_idents FECHA_PARENTESES PONTO_E_VIRGULA bloco PONTO

    ABRE_PARENTESES  deslocar, e ir ao estado 6


State 6

    2 programa: $@1 PROGRAM IDENT ABRE_PARENTESES . lista_idents FECHA_PARENTESES PONTO_E_VIRGULA bloco PONTO

    IDENT  deslocar, e ir ao estado 7

    lista_idents  ir ao estado 8


State 7

   17 lista_idents: IDENT .

    $padrão  reduzir usando a regra 17 (lista_idents)


State 8

    2 programa: $@1 PROGRAM IDENT ABRE_PARENTESES lista_idents . FECHA_PARENTESES PONTO_E_VIRGULA bloco PONTO
   16 lista_idents: lista_idents . VIRGULA IDENT

    FECHA_PARENTESES  deslocar, e ir ao estado 9
    VIRGULA           deslocar, e ir ao estado 10


State 9

    2 programa: $@1 PROGRAM IDENT ABRE_PARENTESES lista_idents FECHA_PARENTESES . PONTO_E_VIRGULA bloco PONTO

    PONTO_E_VIRGULA  deslocar, e ir ao estado 11


State 10

   16 lista_idents: lista_idents VIRGULA . IDENT

    IDENT  deslocar, e ir ao estado 12


State 11

    2 programa: $@1 PROGRAM IDENT ABRE_PARENTESES lista_idents FECHA_PARENTESES PONTO_E_VIRGULA . bloco PONTO

    VAR  deslocar, e ir ao estado 13

    bloco               ir ao estado 14
    parte_declara_vars  ir ao estado 15


State 12

   16 lista_idents: lista_idents VIRGULA IDENT .

    $padrão  reduzir usando a regra 16 (lista_idents)


State 13

    7 parte_declara_vars: VAR . $@3 declara_vars

    $padrão  reduzir usando a regra 6 ($@3)

    $@3  ir ao estado 16


State 14

    2 programa: $@1 PROGRAM IDENT ABRE_PARENTESES lista_idents FECHA_PARENTESES PONTO_E_VIRGULA bloco . PONTO

    PONTO  deslocar, e ir ao estado 17


State 15

    4 bloco: parte_declara_vars . $@2 comando_composto
    5 parte_declara_vars: parte_declara_vars . PONTO_E_VIRGULA declara_vars

    PONTO_E_VIRGULA  deslocar, e ir ao estado 18

    $padrão  reduzir usando a regra 3 ($@2)

    $@2  ir ao estado 19


State 16

    7 parte_declara_vars: VAR $@3 . declara_vars

    $padrão  reduzir usando a regra 10 ($@4)

    declara_vars  ir ao estado 20
    declara_var   ir ao estado 21
    $@4           ir ao estado 22


State 17

    2 programa: $@1 PROGRAM IDENT ABRE_PARENTESES lista_idents FECHA_PARENTESES PONTO_E_VIRGULA bloco PONTO .

    $padrão  reduzir usando a regra 2 (programa)


State 18

    5 parte_declara_vars: parte_declara_vars PONTO_E_VIRGULA . declara_vars

    $padrão  reduzir usando a regra 10 ($@4)

    declara_vars  ir ao estado 23
    declara_var   ir ao estado 21
    $@4           ir ao estado 22


State 19

    4 bloco: parte_declara_vars $@2 . comando_composto

    T_BEGIN  deslocar, e ir ao estado 24

    comando_composto  ir ao estado 25


State 20

    7 parte_declara_vars: VAR $@3 declara_vars .
    8 declara_vars: declara_vars . declara_var

    IDENT     reduzir usando a regra 10 ($@4)
    $padrão  reduzir usando a regra 7 (parte_declara_vars)

    declara_var  ir ao estado 26
    $@4          ir ao estado 22


State 21

    9 declara_vars: declara_var .

    $padrão  reduzir usando a regra 9 (declara_vars)


State 22

   12 declara_var: $@4 . lista_id_var DOIS_PONTOS tipo $@5 PONTO_E_VIRGULA

    IDENT  deslocar, e ir ao estado 27

    lista_id_var  ir ao estado 28
    var_id        ir ao estado 29


State 23

    5 parte_declara_vars: parte_declara_vars PONTO_E_VIRGULA declara_vars .
    8 declara_vars: declara_vars . declara_var

    IDENT     reduzir usando a regra 10 ($@4)
    $padrão  reduzir usando a regra 5 (parte_declara_vars)

    declara_var  ir ao estado 26
    $@4          ir ao estado 22


State 24

   19 comando_composto: T_BEGIN . comandos T_END

    IDENT  deslocar, e ir ao estado 30
    WHILE  deslocar, e ir ao estado 31

    $padrão  reduzir usando a regra 21 (comandos)

    comandos            ir ao estado 32
    comando_sem_rotulo  ir ao estado 33
    atribuicao          ir ao estado 34
    comando_repetitivo  ir ao estado 35
    variavel            ir ao estado 36


State 25

    4 bloco: parte_declara_vars $@2 comando_composto .

    $padrão  reduzir usando a regra 4 (bloco)


State 26

    8 declara_vars: declara_vars declara_var .

    $padrão  reduzir usando a regra 8 (declara_vars)


State 27

   18 var_id: IDENT .

    $padrão  reduzir usando a regra 18 (var_id)


State 28

   12 declara_var: $@4 lista_id_var . DOIS_PONTOS tipo $@5 PONTO_E_VIRGULA
   14 lista_id_var: lista_id_var . VIRGULA var_id

    VIRGULA      deslocar, e ir ao estado 37
    DOIS_PONTOS  deslocar, e ir ao estado 38


State 29

   15 lista_id_var: var_id .

    $padrão  reduzir usando a regra 15 (lista_id_var)


State 30

   27 variavel: IDENT .

    $padrão  reduzir usando a regra 27 (variavel)


State 31

   26 comando_repetitivo: WHILE . expressao DO comando_composto

    ABRE_PARENTESES  deslocar, e ir ao estado 39
    IDENT            deslocar, e ir ao estado 30
    NUMERO           deslocar, e ir ao estado 40

    variavel           ir ao estado 41
    expressao          ir ao estado 42
    expressao_simples  ir ao estado 43
    termo              ir ao estado 44
    fator              ir ao estado 45
    numero             ir ao estado 46


State 32

   19 comando_composto: T_BEGIN comandos . T_END

    T_END  deslocar, e ir ao estado 47


State 33

   20 comandos: comando_sem_rotulo . comandos

    IDENT  deslocar, e ir ao estado 30
    WHILE  deslocar, e ir ao estado 31

    IDENT     [reduzir usando a regra 21 (comandos)]
    WHILE     [reduzir usando a regra 21 (comandos)]
    $padrão  reduzir usando a regra 21 (comandos)

    comandos            ir ao estado 48
    comando_sem_rotulo  ir ao estado 33
    atribuicao          ir ao estado 34
    comando_repetitivo  ir ao estado 35
    variavel            ir ao estado 36


State 34

   22 comando_sem_rotulo: atribuicao . PONTO_E_VIRGULA

    PONTO_E_VIRGULA  deslocar, e ir ao estado 49


State 35

   23 comando_sem_rotulo: comando_repetitivo . comandos

    IDENT  deslocar, e ir ao estado 30
    WHILE  deslocar, e ir ao estado 31

    IDENT     [reduzir usando a regra 21 (comandos)]
    WHILE     [reduzir usando a regra 21 (comandos)]
    $padrão  reduzir usando a regra 21 (comandos)

    comandos            ir ao estado 50
    comando_sem_rotulo  ir ao estado 33
    atribuicao          ir ao estado 34
    comando_repetitivo  ir ao estado 35
    variavel            ir ao estado 36


State 36

   25 atribuicao: variavel . $@6 ATRIBUICAO expressao_simples

    $padrão  reduzir usando a regra 24 ($@6)

    $@6  ir ao estado 51


State 37

   14 lista_id_var: lista_id_var VIRGULA . var_id

    IDENT  deslocar, e ir ao estado 27

    var_id  ir ao estado 52


State 38

   12 declara_var: $@4 lista_id_var DOIS_PONTOS . tipo $@5 PONTO_E_VIRGULA

    IDENT  deslocar, e ir ao estado 53

    tipo  ir ao estado 54


State 39

   39 fator: ABRE_PARENTESES . expressao_simples FECHA_PARENTESES

    ABRE_PARENTESES  deslocar, e ir ao estado 39
    IDENT            deslocar, e ir ao estado 30
    NUMERO           deslocar, e ir ao estado 40

    variavel           ir ao estado 41
    expressao_simples  ir ao estado 55
    termo              ir ao estado 44
    fator              ir ao estado 45
    numero             ir ao estado 46


State 40

   46 numero: NUMERO .

    $padrão  reduzir usando a regra 46 (numero)


State 41

   37 fator: variavel .

    $padrão  reduzir usando a regra 37 (fator)


State 42

   26 comando_repetitivo: WHILE expressao . DO comando_composto

    DO  deslocar, e ir ao estado 56


State 43

   28 expressao: expressao_simples . relacao
   29 expressao_simples: expressao_simples . MAIS termo
   30                  | expressao_simples . MENOS termo
   31                  | expressao_simples . OR termo

    MAIS   deslocar, e ir ao estado 57
    MENOS  deslocar, e ir ao estado 58
    OR     deslocar, e ir ao estado 59
    IGUAL  deslocar, e ir ao estado 60
    MAIOR  deslocar, e ir ao estado 61
    MENOR  deslocar, e ir ao estado 62

    relacao  ir ao estado 63


State 44

   32 expressao_simples: termo .
   33 termo: termo . MULT fator
   34      | termo . DIV fator
   35      | termo . AND fator

    MULT  deslocar, e ir ao estado 64
    DIV   deslocar, e ir ao estado 65
    AND   deslocar, e ir ao estado 66

    $padrão  reduzir usando a regra 32 (expressao_simples)


State 45

   36 termo: fator .

    $padrão  reduzir usando a regra 36 (termo)


State 46

   38 fator: numero .

    $padrão  reduzir usando a regra 38 (fator)


State 47

   19 comando_composto: T_BEGIN comandos T_END .

    $padrão  reduzir usando a regra 19 (comando_composto)


State 48

   20 comandos: comando_sem_rotulo comandos .

    $padrão  reduzir usando a regra 20 (comandos)


State 49

   22 comando_sem_rotulo: atribuicao PONTO_E_VIRGULA .

    $padrão  reduzir usando a regra 22 (comando_sem_rotulo)


State 50

   23 comando_sem_rotulo: comando_repetitivo comandos .

    $padrão  reduzir usando a regra 23 (comando_sem_rotulo)


State 51

   25 atribuicao: variavel $@6 . ATRIBUICAO expressao_simples

    ATRIBUICAO  deslocar, e ir ao estado 67


State 52

   14 lista_id_var: lista_id_var VIRGULA var_id .

    $padrão  reduzir usando a regra 14 (lista_id_var)


State 53

   13 tipo: IDENT .

    $padrão  reduzir usando a regra 13 (tipo)


State 54

   12 declara_var: $@4 lista_id_var DOIS_PONTOS tipo . $@5 PONTO_E_VIRGULA

    $padrão  reduzir usando a regra 11 ($@5)

    $@5  ir ao estado 68


State 55

   29 expressao_simples: expressao_simples . MAIS termo
   30                  | expressao_simples . MENOS termo
   31                  | expressao_simples . OR termo
   39 fator: ABRE_PARENTESES expressao_simples . FECHA_PARENTESES

    FECHA_PARENTESES  deslocar, e ir ao estado 69
    MAIS              deslocar, e ir ao estado 57
    MENOS             deslocar, e ir ao estado 58
    OR                deslocar, e ir ao estado 59


State 56

   26 comando_repetitivo: WHILE expressao DO . comando_composto

    T_BEGIN  deslocar, e ir ao estado 24

    comando_composto  ir ao estado 70


State 57

   29 expressao_simples: expressao_simples MAIS . termo

    ABRE_PARENTESES  deslocar, e ir ao estado 39
    IDENT            deslocar, e ir ao estado 30
    NUMERO           deslocar, e ir ao estado 40

    variavel  ir ao estado 41
    termo     ir ao estado 71
    fator     ir ao estado 45
    numero    ir ao estado 46


State 58

   30 expressao_simples: expressao_simples MENOS . termo

    ABRE_PARENTESES  deslocar, e ir ao estado 39
    IDENT            deslocar, e ir ao estado 30
    NUMERO           deslocar, e ir ao estado 40

    variavel  ir ao estado 41
    termo     ir ao estado 72
    fator     ir ao estado 45
    numero    ir ao estado 46


State 59

   31 expressao_simples: expressao_simples OR . termo

    ABRE_PARENTESES  deslocar, e ir ao estado 39
    IDENT            deslocar, e ir ao estado 30
    NUMERO           deslocar, e ir ao estado 40

    variavel  ir ao estado 41
    termo     ir ao estado 73
    fator     ir ao estado 45
    numero    ir ao estado 46


State 60

   45 relacao: IGUAL . expressao_simples

    ABRE_PARENTESES  deslocar, e ir ao estado 39
    IDENT            deslocar, e ir ao estado 30
    NUMERO           deslocar, e ir ao estado 40

    variavel           ir ao estado 41
    expressao_simples  ir ao estado 74
    termo              ir ao estado 44
    fator              ir ao estado 45
    numero             ir ao estado 46


State 61

   40 relacao: MAIOR . expressao_simples
   43        | MAIOR . IGUAL expressao_simples

    ABRE_PARENTESES  deslocar, e ir ao estado 39
    IDENT            deslocar, e ir ao estado 30
    IGUAL            deslocar, e ir ao estado 75
    NUMERO           deslocar, e ir ao estado 40

    variavel           ir ao estado 41
    expressao_simples  ir ao estado 76
    termo              ir ao estado 44
    fator              ir ao estado 45
    numero             ir ao estado 46


State 62

   41 relacao: MENOR . expressao_simples
   42        | MENOR . MAIOR expressao_simples
   44        | MENOR . IGUAL expressao_simples

    ABRE_PARENTESES  deslocar, e ir ao estado 39
    IDENT            deslocar, e ir ao estado 30
    IGUAL            deslocar, e ir ao estado 77
    MAIOR            deslocar, e ir ao estado 78
    NUMERO           deslocar, e ir ao estado 40

    variavel           ir ao estado 41
    expressao_simples  ir ao estado 79
    termo              ir ao estado 44
    fator              ir ao estado 45
    numero             ir ao estado 46


State 63

   28 expressao: expressao_simples relacao .

    $padrão  reduzir usando a regra 28 (expressao)


State 64

   33 termo: termo MULT . fator

    ABRE_PARENTESES  deslocar, e ir ao estado 39
    IDENT            deslocar, e ir ao estado 30
    NUMERO           deslocar, e ir ao estado 40

    variavel  ir ao estado 41
    fator     ir ao estado 80
    numero    ir ao estado 46


State 65

   34 termo: termo DIV . fator

    ABRE_PARENTESES  deslocar, e ir ao estado 39
    IDENT            deslocar, e ir ao estado 30
    NUMERO           deslocar, e ir ao estado 40

    variavel  ir ao estado 41
    fator     ir ao estado 81
    numero    ir ao estado 46


State 66

   35 termo: termo AND . fator

    ABRE_PARENTESES  deslocar, e ir ao estado 39
    IDENT            deslocar, e ir ao estado 30
    NUMERO           deslocar, e ir ao estado 40

    variavel  ir ao estado 41
    fator     ir ao estado 82
    numero    ir ao estado 46


State 67

   25 atribuicao: variavel $@6 ATRIBUICAO . expressao_simples

    ABRE_PARENTESES  deslocar, e ir ao estado 39
    IDENT            deslocar, e ir ao estado 30
    NUMERO           deslocar, e ir ao estado 40

    variavel           ir ao estado 41
    expressao_simples  ir ao estado 83
    termo              ir ao estado 44
    fator              ir ao estado 45
    numero             ir ao estado 46


State 68

   12 declara_var: $@4 lista_id_var DOIS_PONTOS tipo $@5 . PONTO_E_VIRGULA

    PONTO_E_VIRGULA  deslocar, e ir ao estado 84


State 69

   39 fator: ABRE_PARENTESES expressao_simples FECHA_PARENTESES .

    $padrão  reduzir usando a regra 39 (fator)


State 70

   26 comando_repetitivo: WHILE expressao DO comando_composto .

    $padrão  reduzir usando a regra 26 (comando_repetitivo)


State 71

   29 expressao_simples: expressao_simples MAIS termo .
   33 termo: termo . MULT fator
   34      | termo . DIV fator
   35      | termo . AND fator

    MULT  deslocar, e ir ao estado 64
    DIV   deslocar, e ir ao estado 65
    AND   deslocar, e ir ao estado 66

    $padrão  reduzir usando a regra 29 (expressao_simples)


State 72

   30 expressao_simples: expressao_simples MENOS termo .
   33 termo: termo . MULT fator
   34      | termo . DIV fator
   35      | termo . AND fator

    MULT  deslocar, e ir ao estado 64
    DIV   deslocar, e ir ao estado 65
    AND   deslocar, e ir ao estado 66

    $padrão  reduzir usando a regra 30 (expressao_simples)


State 73

   31 expressao_simples: expressao_simples OR termo .
   33 termo: termo . MULT fator
   34      | termo . DIV fator
   35      | termo . AND fator

    MULT  deslocar, e ir ao estado 64
    DIV   deslocar, e ir ao estado 65
    AND   deslocar, e ir ao estado 66

    $padrão  reduzir usando a regra 31 (expressao_simples)


State 74

   29 expressao_simples: expressao_simples . MAIS termo
   30                  | expressao_simples . MENOS termo
   31                  | expressao_simples . OR termo
   45 relacao: IGUAL expressao_simples .

    MAIS   deslocar, e ir ao estado 57
    MENOS  deslocar, e ir ao estado 58
    OR     deslocar, e ir ao estado 59

    $padrão  reduzir usando a regra 45 (relacao)


State 75

   43 relacao: MAIOR IGUAL . expressao_simples

    ABRE_PARENTESES  deslocar, e ir ao estado 39
    IDENT            deslocar, e ir ao estado 30
    NUMERO           deslocar, e ir ao estado 40

    variavel           ir ao estado 41
    expressao_simples  ir ao estado 85
    termo              ir ao estado 44
    fator              ir ao estado 45
    numero             ir ao estado 46


State 76

   29 expressao_simples: expressao_simples . MAIS termo
   30                  | expressao_simples . MENOS termo
   31                  | expressao_simples . OR termo
   40 relacao: MAIOR expressao_simples .

    MAIS   deslocar, e ir ao estado 57
    MENOS  deslocar, e ir ao estado 58
    OR     deslocar, e ir ao estado 59

    $padrão  reduzir usando a regra 40 (relacao)


State 77

   44 relacao: MENOR IGUAL . expressao_simples

    ABRE_PARENTESES  deslocar, e ir ao estado 39
    IDENT            deslocar, e ir ao estado 30
    NUMERO           deslocar, e ir ao estado 40

    variavel           ir ao estado 41
    expressao_simples  ir ao estado 86
    termo              ir ao estado 44
    fator              ir ao estado 45
    numero             ir ao estado 46


State 78

   42 relacao: MENOR MAIOR . expressao_simples

    ABRE_PARENTESES  deslocar, e ir ao estado 39
    IDENT            deslocar, e ir ao estado 30
    NUMERO           deslocar, e ir ao estado 40

    variavel           ir ao estado 41
    expressao_simples  ir ao estado 87
    termo              ir ao estado 44
    fator              ir ao estado 45
    numero             ir ao estado 46


State 79

   29 expressao_simples: expressao_simples . MAIS termo
   30                  | expressao_simples . MENOS termo
   31                  | expressao_simples . OR termo
   41 relacao: MENOR expressao_simples .

    MAIS   deslocar, e ir ao estado 57
    MENOS  deslocar, e ir ao estado 58
    OR     deslocar, e ir ao estado 59

    $padrão  reduzir usando a regra 41 (relacao)


State 80

   33 termo: termo MULT fator .

    $padrão  reduzir usando a regra 33 (termo)


State 81

   34 termo: termo DIV fator .

    $padrão  reduzir usando a regra 34 (termo)


State 82

   35 termo: termo AND fator .

    $padrão  reduzir usando a regra 35 (termo)


State 83

   25 atribuicao: variavel $@6 ATRIBUICAO expressao_simples .
   29 expressao_simples: expressao_simples . MAIS termo
   30                  | expressao_simples . MENOS termo
   31                  | expressao_simples . OR termo

    MAIS   deslocar, e ir ao estado 57
    MENOS  deslocar, e ir ao estado 58
    OR     deslocar, e ir ao estado 59

    $padrão  reduzir usando a regra 25 (atribuicao)


State 84

   12 declara_var: $@4 lista_id_var DOIS_PONTOS tipo $@5 PONTO_E_VIRGULA .

    $padrão  reduzir usando a regra 12 (declara_var)


State 85

   29 expressao_simples: expressao_simples . MAIS termo
   30                  | expressao_simples . MENOS termo
   31                  | expressao_simples . OR termo
   43 relacao: MAIOR IGUAL expressao_simples .

    MAIS   deslocar, e ir ao estado 57
    MENOS  deslocar, e ir ao estado 58
    OR     deslocar, e ir ao estado 59

    $padrão  reduzir usando a regra 43 (relacao)


State 86

   29 expressao_simples: expressao_simples . MAIS termo
   30                  | expressao_simples . MENOS termo
   31                  | expressao_simples . OR termo
   44 relacao: MENOR IGUAL expressao_simples .

    MAIS   deslocar, e ir ao estado 57
    MENOS  deslocar, e ir ao estado 58
    OR     deslocar, e ir ao estado 59

    $padrão  reduzir usando a regra 44 (relacao)


State 87

   29 expressao_simples: expressao_simples . MAIS termo
   30                  | expressao_simples . MENOS termo
   31                  | expressao_simples . OR termo
   42 relacao: MENOR MAIOR expressao_simples .

    MAIS   deslocar, e ir ao estado 57
    MENOS  deslocar, e ir ao estado 58
    OR     deslocar, e ir ao estado 59

    $padrão  reduzir usando a regra 42 (relacao)
